fixed overflow issues

--- a/src/sass/globals/_footer.scss
+++ b/src/sass/globals/_footer.scss
@@ -1,13 +1,5 @@
-@use './variables' as *;
-
 footer {
     background-color: white;
     color: #000;
     padding: 1em;
-
-    .wrapper {
-        width: $mx-w;
-        margin-inline: auto;
-        padding-left: 2em;
-    }
 }
