--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,5 +1,6 @@
-@use './globals/variables' as *;
 @forward 'globals';
+
+$mx-w: 1024px;
 
 h1 {
     font-size: 2rem;
@@ -11,13 +12,14 @@ h1 {
     width: 100%;
     max-width: $mx-w;
     margin-inline: auto;
-    padding: 2em;
+    padding: 1em;
 
     &.layer::after {
         content: '';
         display: block;
         position: fixed;
         inset: 0;
+        left: 0;
         background-color: rgb(0 0 0 / .5);
         z-index: -1;
     }
